--- a/CrossUpdater/CrossUpdater.csproj
+++ b/CrossUpdater/CrossUpdater.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Cores\Logger\ChangeInfo.cs" />
     <Compile Include="Cores\ReLogger\InterpretResult.cs" />
     <Compile Include="Cores\ReLogger\Relog.cs" />
+    <Compile Include="Cores\ReLogger\RepositoryURL.cs" />
     <Compile Include="Cores\WorkSpace\FileInfo.cs" />
     <Compile Include="Cores\Logger\FileState.cs" />
     <Compile Include="Cores\Logger\Reporter.cs" />
